assets/canary/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: openshift-ingress-canary
  annotations:
    openshift.io/node-selector: ""
