assets/canary/route.yaml
# Hello Openshift Ingress Canary route
# Specific values are applied at runtime
kind: Route
apiVersion: route.openshift.io/v1
# name and namespace are set at runtime.
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    # Service name set at run time
    weight: 100
  wildcardPolicy: None
